--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@types/react-syntax-highlighter": "^15.5.13",
     "clsx": "^2.1.1",
     "framer-motion": "^11.13.1",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.468.0",
-    "next": "15.0.4",
+    "next": "^15.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-syntax-highlighter": "^15.6.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5"
   },
@@ -31,5 +30,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "prismjs": ">=1.30.0"
   }
 }
